--- a/inferless-runtime-config.yaml
+++ b/inferless-runtime-config.yaml
@@ -10,4 +10,5 @@ build:
     - "diffusers==0.27.0"
     - "transformers==4.38.2"
     - "peft==0.9.0"
-    - "huggingface-hub==0.25.2"
+    - "hf-transfer==0.1.9"
+    - "huggingface-hub==0.29.1"
